新增点击提示

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,10 @@
   },
   "permissions": [
     "activeTab",
-    "scripting"
+    "scripting",
+    "contextMenus",
+    "notifications",
+    "activeTab"
 ],
   "content_scripts": [
     {
